# bfjit

./: Cargo.toml  dump.asm  justfile  test.S  test.bf  test_mul.bf
src/: cljit.rs  compile.rs  interpret.rs  jit.rs  lib.rs  main.rs  meassure.rs  scanner.rs
