[package]
name = "bfjit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
libc = "0.2.153"
memmap2 = "0.9.4"

cranelift = "0.106"
cranelift-module = "0.106"
cranelift-jit = {version = "0.106", features = ["selinux-fix"]}
cranelift-native = "0.106"

[profile.release]
debug = true
#strip = true
lto = true
