[package]
name = "bfjit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
memmap2 = "0.9"

cranelift = "0.115"
cranelift-module = "0.115"
cranelift-jit = { version = "0.115", features = ["selinux-fix"] }
cranelift-native = "0.115"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "optimization"
harness = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1

[profile.rel-with-debug]
inherits = "release"
lto = false
debug = true
strip = false
codegen-units = 256
